--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,14 @@
 body {
   margin: 0;
+  overflow: hidden;
 }
 a {
   cursor: pointer;
 }
-.wrapper {
+.container {
   width: 100%;
+  height: 95vh;
+  position: relative;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -13,13 +16,17 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-image: url(images/eSciece_banner.png);
+  background-image: url(images/eScience_banner.png);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
   background-color: #00a3e3;
   height: 100px;
   width: 100%;
+  transition: height 1s;
+}
+#banner.shrink {
+  height: 0;
 }
 /* Splash View */
 
@@ -50,30 +57,18 @@ a {
   background-size: contain;
 }
 
-
-#splashView_tagline {
+.tagline {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   padding: 20px;
   text-align: center;
 }
-
-#ready_tagline {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: left;
-  padding: 100px;
-  text-align: center;
-}
-
 .tagline_font {
   font-family: "Lakki Reddy", cursive;
   font-size: 28px;
 }
-
 
 /*Custom Button CSS*/
 
@@ -146,8 +141,8 @@ a {
 #game_view {
   position: absolute;
   width: 100%;
-  height: 100%;
-  background: linear-gradient(173deg, #fff 0, #0571c2 100%);
+  height: 0;
+  background: linear-gradient(173deg, #fff 20%, #00a3e3 100%);
   left: 0;
   top: -100%;
   transition: top 0.8s ease-in-out, left 0.8s linear, width 0.8s linear, transform 0.8s linear;
@@ -156,6 +151,7 @@ a {
 }
 #game_view.visible {
   top: 0;
+  height: 100vh;
 }
 
 .top_bar {
@@ -194,20 +190,66 @@ canvas {
 #line-chart-div.visible-chart {
   visibility: visible;
 }
+/*Ready View*/
+#ready_view {
+  position: absolute;
+  width: 100%;
+  height: 0;
+  background: linear-gradient(173deg, #fff 20%, #00a3e3 100%);
+  left: -100%;
+  top: 0;
+  transition: top 0.8s ease-in-out, left 0.8s linear, width 0.8s linear, transform 0.8s linear;
+  font-size: 14px;
+  text-align: center;
+}
+#ready_view.visible {
+  left: 0;
+  height: 100%;
+}
+.cards {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 10px;
+}
+.game_card {
+  display: flex;
+  height: auto;
+  width: 80%;
+  min-height: 250px;
+  border: 1px solid silver;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(5px);
+  margin: 10px;
+}
+.game_card:hover {
+  transform: scale3d(1.2, 1.2, 1.2);
+  z-index: 10;
+}
 @media screen and (device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
   #canvas_view {
     align-items: center;
   }
+  .cards {
+    flex-direction: row;
+  }
   canvas {
-    width: 60%;
+    width: 70%;
   }
   #line-chart-div {
-    width: 60%;
+    width: 70%;
   }
 }
 @media screen and (min-device-width: 1281px) and (-webkit-min-device-pixel-ratio: 1) {
   #canvas_view {
     flex-direction: row-reverse;
+  }
+  .cards {
+    flex-direction: row;
   }
   canvas {
     width: 50%;
