change logo to html to facilitate viz on hpc cloud

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,7 +52,7 @@ a {
   margin-left: 10px;
   margin-right: 10px;
   background-position: center;
-  background-image: url(images/quantum_logo.png);
+  /* background-image: url(images/quantum_logo.png); */
   background-repeat: no-repeat;
   background-size: contain;
 }
