--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,6 +25,7 @@ a {
   width: 100%;
   transition: height 1s;
 }
+
 #banner.shrink {
   height: 0;
 }
@@ -142,7 +143,8 @@ a {
   position: absolute;
   width: 100%;
   height: 0;
-  background: linear-gradient(173deg, #fff 20%, #00a3e3 100%);
+  /* background: linear-gradient(173deg, #fff 20%, #00a3e3 100%); */
+  background-color: white;
   left: 0;
   top: -100%;
   transition: top 0.8s ease-in-out, left 0.8s linear, width 0.8s linear, transform 0.8s linear;
@@ -154,12 +156,33 @@ a {
   height: 100vh;
 }
 
+/* #banner {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-image: url(images/eScience_banner.png);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
+  background-color: #00a3e3;
+  height: 100px;
+  width: 100%;
+  transition: height 1s;
+} */
+
 .top_bar {
   display: flex;
   flex: 1;
   flex-direction: row-reverse;
   align-items: center;
   justify-content: center;
+
+  background-image: url(images/eScience_banner.png);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
+  background-color: #00a3e3;
+
 }
 .scores {
   display: flex;
