--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -182,12 +182,14 @@ a {
 }
 #canvas_view {
   width: 80%;
+  /* width: 100%; */
   margin: 0 auto;
   display: flex;
   flex-direction: column-reverse;
   flex: 1;
   justify-content: space-around;
 }
+
 canvas {
   flex: 1;
   width: 100%;
